<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <PreferenceCategory
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/settings_category_content_presentation">

        <net.frju.flym.ui.views.AutoSummaryListPreference
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:defaultValue="DARK"
            android:entries="@array/settings_themes"
            android:entryValues="@array/settings_themes_values"
            android:inputType="text"
            android:key="theme"
            android:title="@string/settings_theme" />

        <net.frju.flym.ui.views.AutoSummaryListPreference
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:defaultValue="0"
            android:entries="@array/settings_font_sizes"
            android:entryValues="@array/settings_font_size_values"
            android:inputType="number"
            android:key="font_size"
            android:title="@string/settings_font_size" />

        <CheckBoxPreference
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:defaultValue="true"
            android:key="display_images"
            android:summary="@string/settings_display_images_description"
            android:title="@string/settings_display_images" />

        <net.frju.flym.ui.views.AutoSummaryListPreference
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:defaultValue="WIFI_ONLY_PRELOAD"
            android:dependency="display_images"
            android:entries="@array/settings_preload_image_modes"
            android:entryValues="@array/settings_preload_image_modes_values"
            android:inputType="text"
            android:key="preload_image_mode"
            android:title="@string/settings_preload_image_mode" />

        <CheckBoxPreference
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:defaultValue="false"
            android:key="open_browser_directly"
            android:summary="@string/open_browser_direct"
            android:title="@string/open_browser_direct_title" />

    </PreferenceCategory>

    <PreferenceCategory
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/settings_category_refresh">

        <CheckBoxPreference
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:defaultValue="true"
            android:key="refresh_enabled"
            android:summary="@string/settings_refresh_enabled_description"
            android:title="@string/settings_refresh_enabled" />

        <net.frju.flym.ui.views.AutoSummaryListPreference
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:defaultValue="7200"
            android:dependency="refresh_enabled"
            android:entries="@array/settings_intervals"
            android:entryValues="@array/settings_interval_values"
            android:inputType="number"
            android:key="refresh_interval"
            android:title="@string/settings_refresh_interval" />

        <CheckBoxPreference
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:defaultValue="true"
            android:dependency="refresh_enabled"
            android:key="enable_refresh_notification"
            android:summary="@string/settings_refresh_enable_notifications_description"
            android:title="@string/settings_refresh_enable_notifications" />

        <CheckBoxPreference
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:defaultValue="true"
            android:key="refresh_on_startup"
            android:summary="@string/refresh_on_startup"
            android:title="@string/refresh_on_startup_title"/>

        <CheckBoxPreference
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:defaultValue="false"
            android:key="refresh_wifi_only"
            android:summary="@string/settings_refresh_wifi_only_description"
            android:title="@string/settings_refresh_wifi_only" />

    </PreferenceCategory>

    <PreferenceCategory
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/settings_category_keep_time">

        <net.frju.flym.ui.views.AutoSummaryListPreference
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:defaultValue="4"
            android:entries="@array/settings_keep_times"
            android:entryValues="@array/settings_keep_time_values"
            android:inputType="number"
            android:key="keep_time"
            android:title="@string/settings_keep_time" />

        <net.frju.flym.ui.views.AutoSummaryListPreference
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:defaultValue="0"
            android:entries="@array/settings_keep_times"
            android:entryValues="@array/settings_keep_time_values"
            android:inputType="number"
            android:key="keep_time_unread"
            android:title="@string/settings_keep_time_unread" />
    </PreferenceCategory>

    <PreferenceCategory
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/settings_category_filter">

        <CheckBoxPreference
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:defaultValue="true"
            android:key="remove_duplicates"
            android:summary="@string/settings_remove_duplicates_description"
            android:title="@string/settings_remove_duplicates_description_title" />

        <EditTextPreference
            android:key="filter_keywords"
            android:summary="@string/filter"
            android:title="@string/filter_title" />

    </PreferenceCategory>

</PreferenceScreen>