<menu xmlns:android="http://schemas.android.com/apk/res/android"
	  xmlns:app="http://schemas.android.com/apk/res-auto"
	  xmlns:tools="http://schemas.android.com/tools"
	  tools:context="net.frju.flym.ui.main.MainActivity">

	<item
		android:id="@+id/reorder"
		android:title="@string/menu_reorder"
		app:showAsAction="never"/>

	<item
		android:id="@+id/import_feeds"
		android:title="@string/menu_import"
		app:showAsAction="never"/>

	<item
		android:id="@+id/export_feeds"
		android:title="@string/menu_export"
		app:showAsAction="never"/>

	<item
		android:id="@+id/menu_entries__settings"
		android:title="@string/menu_settings"
		app:showAsAction="never"/>

	<item
		android:id="@+id/menu_entries__about"
		android:title="@string/about_flym"
		app:showAsAction="never"/>
</menu>
